--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,29 +1,44 @@
 name: Build & Test
-on:
-  push:
-  pull_request:
+
+on: [push, pull_request]
+
 jobs:
-  build-and-test:
+  build-test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.9, 3.10, 3.11]
+        python-version: [ "3.9", "3.10", "3.11" ]
+
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Strip BOM from pyproject.toml
+        # если вдруг BOM остался, снимем его на лету
+        run: |
+          sed -i '1s/^\xEF\xBB\xBF//' pyproject.toml
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Upgrade pip/setuptools/wheel
-        run: python -m pip install --upgrade pip setuptools wheel
+      - name: Upgrade pip, setuptools, wheel
+        run: |
+          python -m pip install --upgrade pip setuptools wheel
 
-      - name: Install dev deps
-        run: pip install -e .[dev]
+      - name: Install dev dependencies
+        run: |
+          pip install .[dev] --no-build-isolation
 
       - name: Run tests
-        run: pytest -q
+        run: |
+          pytest -q --maxfail=1 --disable-warnings
 
       - name: Lint with flake8
-        run: python -m flake8
+        run: |
+          flake8 .
+
+      - name: Security scan with bandit
+        run: |
+          bandit -r src
