--- a/.github/workflows/lint-and-security.yml
+++ b/.github/workflows/lint-and-security.yml
@@ -1,27 +1,30 @@
 name: Lint & Security Checks
-on:
-  push:
-  pull_request:
+
+on: [push, pull_request]
+
 jobs:
-  lint-and-security:
+  lint:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v3
+
+      - name: Strip BOM from pyproject.toml
+        run: sed -i '1s/^\xEF\xBB\xBF//' pyproject.toml
 
       - name: Set up Python 3.11
         uses: actions/setup-python@v4
         with:
-          python-version: 3.11
+          python-version: "3.11"
 
-      - name: Upgrade pip
-        run: python -m pip install --upgrade pip
+      - name: Upgrade pip, setuptools, wheel
+        run: python -m pip install --upgrade pip setuptools wheel
 
-      - name: Install dev tools
-        run: pip install -e .[dev]
+      - name: Install dev dependencies
+        run: pip install .[dev] --no-build-isolation
 
-      - name: Run flake8
-        run: python -m flake8
+      - name: Lint with flake8
+        run: flake8 src
 
       - name: Security scan with bandit
-        run: bandit -r .
-
+        run: bandit -r src
