--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,16 +5,8 @@ description = "ZILANT Prime Core: cryptographic primitives for the ZILANT protoc
 readme = "README.md"
 requires-python = ">=3.9"
 license = { text = "MIT" }
-authors = [
-  { name = "QuantumKeyUYU", email = "you@example.com" }
-]
-keywords = [
-  "zilant",
-  "cryptography",
-  "vdf",
-  "prime",
-  "kdf",
-]
+authors = [{ name = "QuantumKeyUYU", email = "you@example.com" }]
+keywords = ["zilant","cryptography","vdf","prime","kdf"]
 
 dependencies = [
   "aead>=0.2,<1.0",
@@ -34,5 +26,5 @@ dev = [
 ]
 
 [build-system]
-requires = ["setuptools>=42", "wheel"]
+requires = ["setuptools>=42","wheel"]
 build-backend = "setuptools.build_meta"
