--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -2,9 +2,7 @@ name: Build & Test
 
 on:
   push:
-    branches: [ main ]
   pull_request:
-    branches: [ main ]
 
 jobs:
   build-test:
@@ -14,26 +12,27 @@ jobs:
         python-version: [3.9, 3.10, 3.11]
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-          cache: "pip"
 
       - name: Upgrade pip, setuptools, wheel
-        run: python -m pip install --upgrade pip setuptools wheel
+        run: pip install --upgrade pip setuptools wheel
 
       - name: Install dev dependencies
-        run: pip install .[dev] --no-build-isolation
+        run: pip install ".[dev]" --no-build-isolation
+
+      - name: Run tests
+        run: pytest --maxfail=1 --disable-warnings -q
 
       - name: Lint with flake8
-        run: flake8 src tests
+        run: flake8 .
 
       - name: Security scan with bandit
         run: bandit -r src
 
-      - name: Run tests
-        run: pytest --maxfail=1 --disable-warnings -q
+      - name: Quality checks
+        run: mypy src
