--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,18 @@
-[build-system]
-requires = ["setuptools>=61.0", "wheel"]
-build-backend = "setuptools.build_meta"
-
 [project]
 name = "zilant-prime-core"
 version = "0.1.0"
 description = "Core engine for ZILANT Prime™"
 readme = "README.md"
-license = { text = "MIT" }
+requires-python = ">=3.9"
+keywords = ["zilant", "crypto", "vdf"]
+license = { file = "LICENSE" }
 license-files = ["LICENSE"]
+
+# по PEP 621: authors — массив таблиц с name+email
 authors = [
-  { name = "QuantumKeyUYU", email = "email@example.com" }
+  { name = "QuantumKeyUYU", email = "your.email@example.com" },
 ]
+
 dependencies = [
   "cryptography>=41.0.0",
   "numpy>=1.25.0",
@@ -19,5 +20,9 @@ dependencies = [
 ]
 
 [project.urls]
-homepage   = "https://github.com/QuantumKeyUYU/zilant-prime-core"
-repository = "https://github.com/QuantumKeyUYU/zilant-prime-core"
+Homepage = "https://github.com/QuantumKeyUYU/zilant-prime-core"
+Repository = "https://github.com/QuantumKeyUYU/zilant-prime-core"
+
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
