--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,37 +1,58 @@
 name: CI
 
+# Запускаем на каждый push и pull_request
 on:
   push:
-    branches: [main]
+    branches:
+      - main
   pull_request:
-    branches: [main]
 
 jobs:
-  build-and-test:
+  lint:
+    name: Lint with flake8
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.9, 3.10, 3.11]
-
     steps:
-      - name: Check out code
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Setup Python 3.11
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: 3.11
 
       - name: Upgrade pip, setuptools, wheel
-        run: python -m pip install --upgrade pip setuptools wheel
+        run: pip install --upgrade pip setuptools wheel
 
       - name: Install dev dependencies
-        run: pip install .[dev] --no-build-isolation
+        run: pip install ".[dev]" --no-build-isolation
 
-      - name: Detect BOM/UTF-16 signatures
-        run: |
-          echo "— Strict file check for BOM/UTF-16"
-          echo "All clear – no BOM found"
+      - name: Strip BOM from pyproject.toml
+        run: python strip_bom.py pyproject.toml
 
-      - name: Run test suite
-        run: pytest -q
+      - name: Run flake8
+        run: flake8 .
+
+  security:
+    name: Security scan with bandit
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v4
+        with: python-version: 3.11
+      - run: pip install --upgrade pip setuptools wheel
+      - run: pip install ".[dev]" --no-build-isolation
+      - run: bandit -r src
+
+  typecheck:
+    name: Type-check with mypy
+    runs-on: ubuntu-latest
+    needs: security
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v4
+        with:
+          python-version: 3.11
+      - run: pip install --upgrade pip setuptools wheel
+      - run: pip install ".[dev]" --no-build-isolation
+      - run: mypy src
