--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,42 +39,33 @@ jobs:
       - name: 📦 Install dependencies (dev)
         run: |
           python -m pip install --upgrade pip setuptools wheel
+          # Устанавливаем базовые dev-зависимости из requirements-dev.txt
           if [ -f requirements-dev.txt ]; then
             python -m pip install -r requirements-dev.txt
-          else
-            python -m pip install \
-              pre-commit \
-              ruff \
-              black \
-              isort \
-              mypy \
-              pytest \
-              coverage \
-              syft \
-              semgrep \
-              cosign
           fi
+          # Убедимся, что black и isort установлены (они не в requirements-dev.txt)
+          python -m pip install black isort
 
       - name: 🔍 Run pre-commit hooks
-        run: pre-commit run --all-files
+        run: python -m pre_commit run --all-files
 
       - name: 🔍 Run ruff (lint)
-        run: ruff check .
+        run: python -m ruff check .
 
       - name: 🔍 Run black (format check)
-        run: black --check .
+        run: python -m black --check .
 
       - name: 🔍 Run isort (import order)
-        run: isort --check-only .
+        run: python -m isort --check-only .
 
       - name: 🔍 Run mypy (type check)
-        run: mypy src
+        run: python -m mypy src
 
       - name: 🧪 Run pytest with coverage
         run: |
-          pytest --maxfail=1 --disable-warnings -q --cov=src
-          coverage xml -o coverage.xml
-          coverage html -d htmlcov
+          python -m pytest --maxfail=1 --disable-warnings -q --cov=src
+          python -m coverage xml -o coverage.xml
+          python -m coverage html -d htmlcov
 
       - name: 📁 Upload coverage reports
         uses: actions/upload-artifact@v4
