--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.1.0"
 description = "..."
 authors = [{name="Your Name", email="you@example.com"}]
 dependencies = [
- codex/завершение-разработки-mini-gui-и-devsecops
+    "pytest-cov>=5.0.0",
     "click>=8.0",
     "cryptography>=36.0.0",
     "PyNaCl>=1.4.0",
