--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,10 @@ version = "0.1.0"
 description = "..."
 authors = [{name="Your Name", email="you@example.com"}]
 dependencies = [
-    "pytest-cov>=5.0.0",
-    "click>=8.0",
-    "cryptography>=36.0.0",
-    "PyNaCl>=1.4.0",
+    "opentelemetry-sdk>=1.34.1",
+    "opentelemetry-exporter-otlp>=1.34.1",
+    "opentelemetry-sdk>=1.34.1",
+    "opentelemetry-exporter-otlp>=1.34.1",
     "PyQt5>=5.15.0",
     "opentelemetry-sdk>=1.20.0",
     "opentelemetry-exporter-otlp>=1.20.0",
