--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -88,6 +88,10 @@ jobs:
 
       - name: Install build deps
         run: pip install -e .[dev] build pyyaml
+      - name: Build PQ wheels
+        run: |
+          python -m pip install --upgrade build
+          python -m build --wheel --outdir dist .
 
       # ---------- wheels ----------
       - name: Build wheels
