--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -100,7 +100,9 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: wheels
-          path: dist/*.whl
+          path: |
+            dist/*.whl
+            dist/**/*.whl
 
       # ---------- Whitepaper ----------
       - name: Install Pandoc + XeLaTeX (русский шрифт)
