--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -1,4 +1,4 @@
-name: Quality / CI pipeline
+name: Quality / CI pipeline
 
 on:
   push:
@@ -6,22 +6,22 @@ on:
   pull_request:
     branches: [ main, ci-check-ready ]
 
-# -------------------------------------------------------------------
 jobs:
-# ──────────────────────────── Lint + type + tests ───────────────────
+  #────────────────────────────── Lint + type + tests ──────────────────────────────
   quality:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set‑up Python
+      - name: Set-up Python
         uses: actions/setup-python@v5
-        with: { python-version: "3.13" }
+        with:
+          python-version: "3.13"
 
-      - name: Install dev‑deps
+      - name: Install dev-deps
         run: pip install -e .[dev]
 
-      - name: Pre‑commit
+      - name: Pre-commit
         run: pre-commit run --all-files
 
       - name: Ruff
@@ -45,53 +45,95 @@ jobs:
       - name: Pytest
         run: ZILANT_ALLOW_ROOT=1 pytest -q
 
-# ──────────────────────────── Perf subset ───────────────────────────
+  #────────────────────────────── Perf subset ──────────────────────────────
   perf:
     needs: quality
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
-        with: { python-version: "3.13" }
+        with:
+          python-version: "3.13"
       - run: pip install -e .[dev]
       - run: SKIP_FUZZ=1 ZILANT_ALLOW_ROOT=1 pytest -q -m perf --disable-warnings --maxfail=1
 
+  #────────────────────────────── Large-file tests ──────────────────────────────
   large-file-test:
     needs: quality
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    labels:
-      needs-large-runner: true
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
-        with: { python-version: "3.13" }
+        with:
+          python-version: "3.13"
       - run: pip install -e .[dev]
       - run: pytest -q tests/test_stream_large.py tests/test_stream_resume.py
 
+  #────────────────────────────── CLI-polish tests ──────────────────────────────
   cli-polish:
     needs: quality
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
-        with: { python-version: "3.13" }
+        with:
+          python-version: "3.13"
       - run: pip install -e .[dev]
       - run: pytest -q tests/test_cli_observability.py
 
-# ──────────────────────────── Build + artefacts ─────────────────────
+  #────────────────────────────── Build docs ──────────────────────────────
+  docs:
+    needs: quality
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      # 1) Python‐зависимости для Sphinx/Makefile
+      - name: Install docs-deps
+        run: pip install -e .[docs]
+
+      # 2) Node + mermaid-cli
+      - uses: actions/setup-node@v3
+        with:
+          node-version: "18"
+      - name: Install Mermaid-CLI
+        run: npm install -g @mermaid-js/mermaid-cli
+
+      # 3) Chrome deps для Puppeteer
+      - name: Install Chrome system deps
+        run: |
+          sudo apt-get update -qq
+          sudo apt-get install -y \
+            libx11-xcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 \
+            libxfixes3 libxi6 libxrandr2 libxtst6 libnss3 libatk1.0-0 \
+            libgtk-3-0 libpangocairo-1.0-0
+
+      # 4) Генерация диаграмм с --no-sandbox
+      - name: Generate Mermaid diagrams
+        run: |
+          npx @mermaid-js/mermaid-cli --no-sandbox \
+            -i docs/architecture/key_lifecycle.mmd \
+            -o docs/_static/key_lifecycle.svg
+
+      # 5) Сборка HTML-документации
+      - name: Build docs
+        working-directory: docs
+        run: make html
+
+  #────────────────────────────── Build + artefacts ──────────────────────────────
   build-pq:
     needs: [ quality, perf ]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
-        with: { python-version: "3.13" }
+        with:
+          python-version: "3.13"
 
-      - name: Install build deps
+      - name: Install build deps
         run: pip install -e .[dev] build pyyaml
 
-      # ---------- wheels ----------
       - name: Build wheels
         run: python tools/build_pq_wheels.py
 
@@ -100,31 +142,4 @@ jobs:
           name: wheels
           path: dist/*.whl
 
-      # ---------- Whitepaper ----------
-      - name: Install Pandoc + XeLaTeX (русский шрифт)
-        run: |
-          sudo apt-get update -qq
-          sudo apt-get install -y pandoc texlive-xetex texlive-lang-cyrillic fonts-dejavu-core fonts-dejavu-extra
-
-      - name: Generate whitepaper
-        run: python tools/gen_whitepaper.py
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: whitepaper
-          path: dist/whitepaper.pdf
-
-      # ---------- ISO 27001 SoA (опционно) ----------
-      - name: Generate ISO 27001 SoA (if controls present)
-        run: |
-          if [ -f docs/iso_controls.yml ]; then
-            python tools/iso_soa_generator.py
-          else
-            echo "No docs/iso_controls.yml — skipping SoA generation"
-          fi
-
-      - uses: actions/upload-artifact@v4
-        if: ${{ hashFiles('docs/SoA_ISO27001.md') != '' }}
-        with:
-          name: iso-soa
-          path: docs/SoA_ISO27001.md
+      # — далее шаги по Whitepaper и ISO SoA (как у тебя были) —
