--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
 jobs:
   tests:
-    uses: ./.github/workflows/pytest-reusable.yml@main
+    uses: ./.github/workflows/pytest-reusable.yml
     strategy:
       fail-fast: false
       matrix:
