--- a/.github/workflows/fuse.yml
+++ b/.github/workflows/fuse.yml
@@ -91,7 +91,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: app-debug
-          path: mobile/android/app/build/outputs/apk/debug/app-debug.apk
+          path: mobile/android/app/build/outputs/apk/debug/*.apk
           retention-days: 5
 
   wormhole-e2e:
@@ -112,8 +112,8 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          pip install pytest
+          pip install -r requirements.txt -r requirements-dev.txt
+          pip install -e .
       - name: Run e2e
         run: python -m pytest tests/test_wormhole_e2e.py
 
@@ -131,8 +131,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          pip install pytest
+          pip install -r requirements.txt -r requirements-dev.txt
           pip install .[cli]
       - name: Run wizard test (pty)
         run: python -m pytest -m wizard
